# arabic-nlp-toolkit

./: .gitignore  LICENSE  README.md  demo.py  pyproject.toml
.github/workflows/: tests.yml
arabic_nlp_toolkit/: __init__.py  char_ngrams.py  cleaning.py  keywords.py  normalization.py  preprocessing.py  sentence.py  statistics.py  stopwords.py  tokenization.py
arabinlp/: cleaning.py  frequency.py  language.py  ngrams.py  normalization.py  similarity.py
arabinlp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
arabinlp/resources/: stopwords.txt
tests/: test_char_ngrams.py  test_cleaning.py  test_frequency.py  test_keywords.py  test_language.py  test_ngrams.py  test_sentence.py  test_similarity.py  test_statistics.py  test_stopwords.py  test_tokenization.py
