[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arabinlp"
version = "2.0.0"
description = "A modern Python toolkit for Arabic Natural Language Processing (NLP)."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

authors = [
    {name = "Ibtihal Makki"}
]

keywords = [
    "arabic",
    "arabic-nlp",
    "nlp",
    "text-processing",
    "natural-language-processing",
    "machine-learning",
    "generative-ai"
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = []

[project.urls]
Homepage = "https://github.com/IbtihalMakki/arabic-nlp-toolkit"
Repository = "https://github.com/IbtihalMakki/arabic-nlp-toolkit"
Issues = "https://github.com/IbtihalMakki/arabic-nlp-toolkit/issues"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools.package-data]
arabinlp = ["resources/*.txt"]